# reflorm

./: .gitignore  CMakeLists.txt  CMakePresets.json
docs/: basic-mapping.md  development.md  join.md  mutations.md  nested-select.md  query.md  relations.md  relationships.md  schema-generator.md  select.md  sql-generator.md  sqlite-runtime.md  syntax.md
docs/examples/: usage-examples.md
include/cpporm/: annotations.hpp  config.hpp  cpporm.hpp  descriptors.hpp  fixed_string.hpp  materialization.hpp  mutation.hpp  ordering.hpp  predicate.hpp  registry.hpp  relations.hpp  schema.hpp  select.hpp  sql_string.hpp  sqlite_runtime.hpp
include/cpporm/dialects/: sqlite.hpp
tests/: basic_mapping_tests.cpp  join_tests.cpp  mutation_tests.cpp  nested_select_tests.cpp  predicate_tests.cpp  relation_tests.cpp  relationship_tests.cpp  schema_tests.cpp  sqlite_runtime_tests.cpp
tests/cmake/: expect_compile_failure.cmake
tests/compile_fail/: has_many_without_inverse_reference.cpp  join_ambiguous_reference.cpp  join_without_reference.cpp  model_constraint_must_be_static.cpp  nested_select_without_root_field.cpp  nested_select_wrong_target_field.cpp  reference_to_ignored_field.cpp  reference_to_unregistered_model.cpp  reference_type_mismatch.cpp  relation_without_reference.cpp  update_payload_without_primary_key.cpp  upsert_payload_without_update_fields.cpp
